--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
     <h1>A site about chocolate</h1>
     <h3>We will see some of the world's chocolates!</h3>
 </div>
-    <p>It arrived to Europe in 16<sup>th</sup> century</p>
+    <ol>
+        <li>It arrived to Europe in 16<sup>th</sup> century</li>
+        <li>The first years, only drinking chocolate was available</li>
+        <li>It was considered luxury food!</li>
+        <li>It contains <span style="text-decoration: underline;">caffeine</span></li>
+        <li><span class="yellowBG">Your brain needs it after hard work!</span></li>
+    </ol>
+    <a href = "https://en.wikipedia.org/wiki/Chocolate" target="_blank">
+        <img src = "images/chocolatethings.jpg" alt = "This is a photo of chocolate strawberries" title = "Click to visit the ....">
+   </a>
 </body>
 </html>
